2006-02-09 WinMerge experimental release 2.5.3.2 (cvs)

2006-02-09 Kimmo
 PATCH: [ 1427851 ] Small cleanup for FileFilterMgr::AddFilter()
  Src: FileFilterMgr.cpp
 Add Jan Hryz as Czech translator and contributor
  Docs/Users: Contributors.txt

2006-02-08 Perry
 PATCH: [ 1427845 ] Double-click fails to open, no message
  Src: MergeDoc.cpp
 BUG: [ 1427956 ] Differences count in Folder Compare wrong?
  Make sure to set diff count to 0 just before counting them
  Src: DiffWrapper.cpp

2006-02-08 Kimmo
 PATCH: [ 1426499 ] Move Save Projectfile to File menu
  Src: DirDoc.cpp DirDoc.h MainFrm.cpp MainFrm.h Merge.rc MergeDoc.cpp
   MergeDoc.h OpenDlg.cpp OpenDlg.h resource.h
  Src/Languages/*: Merge*.rc

2006-02-08 Perry
 PATCH: [ 1424884 ] Fix UniStdioFile encoding of TCHAR
  Src\Common: UniFile.cpp unicoder.cpp unicoder.h

2006-02-08 Perry
 Current selftests status: Failure count: 0 (of 756)

2006-02-08 Perry
 PATCH: [ 1426552 ] Add selftests between platform versions
  Src: Changes.txt ConfigLog.cpp DiffWrapper.cpp DiffWrapper.h
   DirDoc.cpp MainFrm.cpp MergeArgs.cpp MergeDoc.cpp
   MergeDocLineDiffs.cpp OptionsDef.h OptionsInit.cpp PatchTool.cpp
   PropCompare.cpp PropCompare.h 
  Src\editlib: ccrystaltextbuffer.cpp ccrystaltextbuffer.h

2006-02-08 Perry
 Current selftests status: Failure count: 0 (of 588)

2006-02-08 Perry
 PATCH: [ 1424867 ] Fix common prefix code for \r\n
  Src\diffutils\src: IO.C
 PATCH: [ 1426793 ] Fix diffutils that counts lines in suffix
  Src\diffutils\src: IO.C

2006-02-07 Perry
 Current selftests status: Failure count: 0 (of 588)

2006-02-07 Kimmo
 PATCH: [ 1424535 ] Czech Translation, Submitted by Jan Hryz
  Fix dir compare report dialog layout
  Src: Merge.rc
  Src/Languages/*: Merge*.rc

2006-02-06 Perry
 Synchronizing Slovak translation to English where feasible.
  Src/Languages/Slovak: MergeSlovak.rc
 Synchronizing Swedish translation to English where feasible.
  Src/Languages/Swedish: MergeSwedish.rc